Corrected grid-template-columns settings under .grid-container class. Added a class for Buy Me A Coffee feature. Added word wrapping and pre-line white space.

--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -4,7 +4,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #D9D9D9;
     justify-content: center;
-    align-content: center;
+    margin: auto;
     clear: both;
 }
 
@@ -12,6 +12,7 @@ body {
 
 .content {
     padding: 10px;
+    margin: auto;
     background-color: #E6E6E6;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -19,14 +20,21 @@ body {
 .grid-container {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: max-content max-content;
+    grid-template-columns: auto auto;
     background-color: #E6E6E6;
-    padding: 10px;
+    padding: 20px;
     align-content: center;
 }
 
 .paragraph {
     font-family: Arial, Helvetica, sans-serif;
-    word-break: break-all;
-    white-space: normal;
+    max-width: 100%;
+    margin: auto;
+    word-wrap: break-word;
+    white-space: pre-line;
+}
+
+/* Buy Me A Coffee */
+.BuyMeCoffee {
+    float: left;
 }
